add pyarrow for marimo experience

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "marimo (>=0.13.10,<0.14.0)",
-    "pandas (>=2.2.3,<3.0.0)"
+    "pandas (>=2.2.3,<3.0.0)",
+    "pyarrow (>=20.0.0,<21.0.0)"
 ]
 
 [tool.poetry]
